--- a/patch/hardware/ramips/tenda/a6/README
+++ b/patch/hardware/ramips/tenda/a6/README
@@ -4,7 +4,7 @@ Salin A6.dts ke: <folder_root_openwrt>/target/linux/ramips/dts
 
 CATATAN: A6.patch
 =========================
-File patch sudah cukup tua, lakan copy-paste manual ke setiap file target untuk mendapatkan tingkat keberhasilan yang tinggi.
+File patch sudah cukup tua, lakukan copy-paste manual ke setiap file target untuk mendapatkan tingkat keberhasilan yang tinggi.
 
 Setelah file-file target berhasil dirubah, hapus semua isi direktori tmp dengan perintah:
     <folder_root_openwrt>$ rm -rf tmp/*
